# Prompt-Contract-Architecture

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: customer.create@1.0.0.yaml  customer.create@2.0.0.yaml  report.generate@1.0.0.yaml
docker/: Dockerfile  docker-compose.yml
mkdocs/: mkdocs.yml
mkdocs/docs/: architecture.md  index.md
mkdocs/docs/contracts/: index.md
src/pca/: __init__.py  audit.py  auth.py  cli.py  config.py  db.py  docs_gen.py  main.py  test_gen.py
src/pca/api/: __init__.py  audit.py  contracts.py  dev.py  docs_gen.py  invoke.py  tests_gen.py
src/pca/contracts/: __init__.py  loader.py  registry.py  schema.py  validator.py
src/pca/llm/: __init__.py  base.py  litellm_provider.py  mock_provider.py
src/pca/runtime/: __init__.py  classifier.py  errors.py  orchestrator.py  rules.py  schema_builder.py
src/pca/tools/: __init__.py  base.py  customer_db.py  email_service.py  report_service.py
src/pca/ui/: index.html
src/pca/ui/static/: app.js
tests/: conftest.py
tests/integration/: test_invoke_e2e.py
tests/unit/: test_contracts.py  test_docs_gen.py  test_orchestrator.py  test_registry_hotreload.py  test_test_gen.py
