[tool.poetry]
name = "pca"
version = "0.1.0"
description = "Prompt Contract Architecture — make prompts first-class software artifacts."
authors = ["PCA Contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "pca", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic = "^2.7"
pydantic-settings = "^2.3"
pyyaml = "^6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
aiosqlite = "^0.20"
python-jose = { extras = ["cryptography"], version = "^3.3" }
litellm = "^1.40"
watchdog = "^4.0"
email-validator = "^2.1"
semver = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.5"
mypy = "^1.10"
mkdocs-material = "^9.5"

[tool.poetry.scripts]
pca = "pca.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
